[gd_scene load_steps=4 format=2]

[ext_resource path="res://Enemies/enemy.png" type="Texture" id=1]
[ext_resource path="res://Enemies/mob.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.98493, 7.04957 )

[node name="mob" type="PathFollow2D"]
loop = false
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 64

[node name="Sprite" type="Sprite" parent="Area2D"]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="SlowDownTimer" type="Timer" parent="."]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="timeout" from="SlowDownTimer" to="." method="_on_SlowDownTimer_timeout"]
